# Tools

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  gitguardian.yml  links.yml
backend/: config.py  main.py  pyproject.toml
backend/scripts/: dev.sh  start.bat
backend/src/application/dto/: base64_dto.py
backend/src/application/repositories/: base64_repository.py
backend/src/application/use_cases/: base64_operations.py
backend/src/domain/entities/: base64.py
backend/src/domain/value_objects/: encoding_types.py
backend/src/infrastructure/repositories/: base64_repository_impl.py
backend/src/presentation/api/v1/endpoints/: analytics.py  contact.py  tools.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_flow.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_base64_operations.py  test_base64_repository.py  test_integration_validation.py
src/application/dto/: base64_dto.py
src/application/use_cases/: base64_operations.py
src/core/entities/: base64.py
src/core/ports/: base64_repository.py
src/infrastructure/repositories/: base64_repository_impl.py
src/infrastructure/web/controllers/: base64_controller.py
src/infrastructure/web/seo/: meta_generator.py  sitemap_generator.py
src/presentation/static/css/: style.css
src/presentation/static/js/: main.js
src/presentation/templates/: base.html  base64_tool.html  contact.html  sitemap.xml.j2
